--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,75 @@
-h1 {
-font-family: "Poppins" sans-serif;
-font-size: 96px;
-font-weight: 700;
-line-height: 144px;
-text-align: left;
+body {
+    font-family: "Poppins", sans-serif;
+    background-color: #272044;
+;
+}
 
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
+header {
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
+    url('../images/icelandpic.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    padding: 200px 0;
+}
+
+header h1 {
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 1;
+    margin: 30px 0;
+}
+
+header h2 {
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 1.5;
+    margin: 0;
+}
+
+header h3 {
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 1.5;
+    letter-spacing: 3px;
+    margin: 0;
+}
+
+header a {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: center;
+    color: #272044;
+    padding: 16px 32px;
+    display: inline-block;
+    margin-top: 32px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-decoration: none;
+    background-color: white;
+}
+
+@media (max-width:900px) {
+    header {
+        padding: 60px 0;
+    }
+
+    header h1 {
+        font-size: 48px;
+    }
+
+    header h2 {
+        font-size: 20px;
+    }
+
+    header h3 {
+        font-size: 12px;
+    }
 }
