--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 body {
     font-family: "Poppins", sans-serif;
     background-color: #272044;
-;
 }
 
 .container {
@@ -34,6 +33,10 @@ body {
 
 .grid-3-columns-with-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
+}
+
+.instagram-embeds {
+  margin: 30px 0;
 }
 
 .card {
@@ -224,4 +227,5 @@ footer a {
     section {
       padding: 30px;
     }
+
 }
